Fixed overlapping boxes on user box

--- a/frontPage.css
+++ b/frontPage.css
@@ -19,3 +19,7 @@
 .featuredDuration {
 	background-color:transparent !important;
 }
+.personalNavLink {
+	padding: 0px !important;
+}
+	
